Added css for section hero

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <div class="container">
       <div class="header-wrapper">
         <div class="header-logo">
+          <a href="#" class="header-logo__icon"></a>
           <a href="#" class="header-logo__link">КЛУБ <br> ЧЕТЫРЕХ КОНЕЙ</a>
         </div>
       </div>
@@ -22,13 +23,13 @@
     <section class="hero">
       <div class="container">
         <div class="hero-wrapper">
-          <div class="hero-title">
-            <h1>ПРЕВРАТИТЕ УЕЗДНЫЙ ГОРОД <span>В СТОЛИЦУ</span><span>ЗЕМНОГО ШАРА</span></h1>
+          <div>
+            <h1 class="hero-title">ПРЕВРАТИТЕ УЕЗДНЫЙ ГОРОД <span class="hero-title__center">В СТОЛИЦУ</span> <span class="hero-title__right">ЗЕМНОГО ШАРА</span></h1>
           </div>
-          <p class="hero-text">Оплатите взнос на телеграммы для организации Международного васюкинского турнира по шахматам</p>
+          <p class="hero-text">Оплатите взнос на телеграммы<br> для организации Международного васюкинского турнира по шахматам</p>
           <div class="hero-btns">
-            <a href="#">Поддержать шахматную мысль</a>
-            <a href="#">Подробнее о турнире</a>
+            <a href="#" class="hero-btn hero-btn__support">Поддержать шахматную мысль</a>
+            <a href="#" class="hero-btn hero-btn__about">Подробнее о турнире</a>
           </div>
         </div>
       </div>
