--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
   <header class="header">
-    <div class="container">
+    <div class="container container-background">
       <div class="header-wrapper">
         <div class="header-logo">
           <a href="#" class="header-logo__icon"></a>
